fixed footer margin/padding gap

--- a/amnohfels-client/app/styles/_footer.scss
+++ b/amnohfels-client/app/styles/_footer.scss
@@ -4,7 +4,7 @@ footer {
   height: 50px;
   line-height: 50px;
   vertical-align: middle;
-  margin: 40px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
   text-align: right;
   color: #777777;
   border-top: 1px solid #121212;
