--- a/amnohfels-client/app/styles/_parallax-module.scss
+++ b/amnohfels-client/app/styles/_parallax-module.scss
@@ -3,7 +3,7 @@
   display: block;
   position: relative;
   background-attachment: fixed;
-  background-position: center;
+  background-position: top;
   background-size: 100%;
   background-repeat: no-repeat;
   background-image: url("../images/parallax/sample.jpg");
