--- a/amnohfels-client/app/styles/main.scss
+++ b/amnohfels-client/app/styles/main.scss
@@ -24,7 +24,7 @@ body {
 }
 
 html {
-  padding-bottom: 90px;
+  padding-bottom: 50px;
   min-height: 100%;
   position: relative;
 }
